--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.13.25",
-    "gatsby-image": "^2.2.6",
-    "gatsby-plugin-manifest": "^2.2.3",
+    "@fortawesome/fontawesome-free": "^5.10.1",
+    "bootstrap": "^4.3.1",
+    "gatsby": "^2.13.51",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.2.7",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-sharp": "^2.2.3",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sass": "^2.1.4",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-transformer-sharp": "^2.2.5",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-scrollspy": "^3.4.0"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
